# VibeExtract

./: .gitignore  .mcp.json  README.md  assetHarvester.js  background.js  combo-output.toon  contentScript.js  export.html  export.js  manifest.json  popup.html  popup.js
.claude/commands/: replicate-ui.md
.claude/skills/replicate-ui/: SKILL.md
desktop/: .gitignore  README.md
desktop/app/: setup-codesign.sh  sign-build.sh
desktop/app/src-tauri/: Cargo.toml  tauri.conf.json
desktop/app/src-tauri/capabilities/: default.json
desktop/app/src-tauri/src/: lib.rs  main.rs
desktop/app/src-tauri/src/mcp/: ax_bridge.rs  mod.rs  params.rs
desktop/combo/: Cargo.toml  combo-output.html
desktop/combo/src/: main.rs
desktop/core/: Cargo.toml
desktop/core/src/: asar.rs  ax_macos.rs  bundle_macos.rs  capture.rs  cdp.rs  dispatcher.rs  dotnet_xaml.rs  electron_relaunch.rs  event_tap_macos.rs  framework_detect.rs  image_diff.rs  lib.rs  native_format.rs  output.rs  pe_windows.rs  picker.rs  sampling.rs  screenshot.rs  settings.rs  uia_windows.rs  windows_list.rs
desktop/native-extract/: Cargo.toml  native-output.html  native-output.toon
desktop/native-extract/src/: main.rs
desktop/picker-macos/: Cargo.toml
desktop/picker-macos/src/: main.rs
desktop/spike/: Cargo.toml  spike-output.html  spike-output.toon
desktop/spike/src/: main.rs
docs/: REPLICATE_UI_PLAYBOOK.md
scripts/: toon-to-html.js
