[package]
name = "vibe-extract-combo"
version = "0.1.0"
edition = "2021"
description = "Phase 2-lite: end-to-end demo. Use macOS AX to identify the element under the cursor in a running Electron app, then run Phase 0's CDP injection against that app to get pixel-perfect TOON/HTML for that exact element."

[[bin]]
name = "combo"
path = "src/main.rs"

[dependencies]
# CDP / async / HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS AX
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.24"
core-graphics-types = "0.2"
libc = "0.2"

# CLI / errors
clap = { version = "4", features = ["derive"] }
anyhow = "1"
