[package]
name = "vibe-extract-cdp-spike"
version = "0.1.0"
edition = "2021"
description = "Phase 0 spike: prove that injecting VibeExtract's contentScript.js into a running Electron app via CDP yields the same pixel-perfect TOON/HTML output as the browser extension."

[[bin]]
name = "spike"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
url = "2"
