[package]
name = "vibe-extract-desktop"
version = "0.1.0"
edition = "2021"
description = "VibeExtract Desktop — Tauri shell. Wraps the core extraction library with a global hotkey, a small picker UI, and an export view that reuses the browser extension's export.html verbatim."

[lib]
name = "vibe_extract_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"

# Our shared lib
vibe-extract-core = { path = "../../core" }

# Runtime
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
axum = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }
base64 = "0.22"

[dev-dependencies]
# Generate valid PNGs in MCP tool tests (compare_images).
image = { version = "0.25", default-features = false, features = ["png"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
